<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">하루</string>
    <string name="today">오늘</string>
    <string name="tab_calendar">캘린더</string>
    <string name="tab_todos">할 일</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="new_event">새 일정</string>
    <string name="hint_title">제목</string>
    <string name="label_date">날짜</string>
    <string name="label_time">시간</string>
    <string name="label_repeat">반복</string>
    <string name="label_place">장소</string>
    <string name="label_category">카테고리</string>
    <string name="label_memo">메모</string>
    <string name="empty_events">등록된 일정이 없어요</string>
    <string name="empty_todos">해당하는 할 일이 없어요</string>

    <string name="title">제목</string>
    <string name="description">설명</string>
    <string name="location">위치</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="select_date">날짜 선택</string>
    <string name="select_time">시간 선택</string>
    <string name="start_button">시작하기</string>
</resources>
